[package]
name = "hn"
author = "Mario Scarciofalo <mscnode>"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
futures = "0.3.31"
once_cell = "1.21.3"
open = "5.3.3"
reqwest = { version = "0.12.25", features = ["cookies"] }
scraper = "0.25.0"
tokio = { version = "1.48.0" , features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
